# JieHuo

./: .env.example  .gitattributes  .gitignore  README.md  handoff.md  pyproject.toml
docs/: twitter-launch.md
extension/chromium/: manifest.json  offscreen.html  options.html  options.js  package-lock.json  package.json  popup.html  popup.js  route.html  route.js  router.js  service_worker.js  status.html  status.js  styles.css  test_router.mjs
extension/chromium/scripts/: build.mjs  check-dist.mjs
extension/chromium/src/: offscreen_entry.js
ml/: 01_collect_public.py  02_synth_queries.py  03_heuristic_labels.py  04_llm_label.py  05_merge_split.py  06_train.py  07_eval.py  08_export_onnx.py  09_upload_hf.py  __init__.py  _bootstrap.py  common.py  ollama_client.py  run_full_ollama.py  run_pipeline.py
scripts/: make_social_card.py  retry_train.sh  run_api_label.sh  run_full_pipeline.sh  run_pipeline.sh  train_after_api_label.sh  train_after_relabel.sh
supabase/: schema.sql
web/: .vercelignore  next.config.ts  package-lock.json  package.json  vercel.json
web/app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  opengraph-image.alt.txt  page.tsx
web/app/api/feedback/: route.ts
web/app/api/route/: route.ts
web/app/search/: route.ts
web/lib/: classifier.ts  favicon-font.ts  heuristics.ts  hf-inference-router.ts  neural-router-runtime.ts  neural-router.ts  server-router.ts  worker.ts
web/public/models/multilingual-router/: README.md  config.json  label_config.json  parity.json  router_config.json  (+1 more)
web/scripts/: patch-transformers-node-export.mjs
(+2 files in other folders)
